extended redline in css

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <div><b></b></div>
         </div>
         <div id="redline"></div>
+        <div id="redline2"></div>
         <div class="line"></div>
         <div class="pin"><div class="inner"></div></div>
       </div>
