add label to tach

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
         <div id="redline"></div>
         <div id="redline2"></div>
+        <div id="label">x1000 r / min</div>
         <div class="line"></div>
         <div class="pin"><div class="inner"></div></div>
       </div>
