--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tachometer</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.4.0/annyang.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Play" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
@@ -43,8 +44,3 @@
     <script src="./script.js" charset="utf-8"></script>
   </body>
 </html>
-
-<script>document.write('<script src="http://'
-    + (location.host || 'localhost').split(':')[0]
-    + ':35729/livereload.js"></'
-    + 'script>')</script>
