added jQuery CDN and hopefully rotates the line

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Tachometer</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.4.0/annyang.min.js"></script>
+    <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>  
     <link href="https://fonts.googleapis.com/css?family=Francois+One|Play" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
